--- a/pyq/Anatomy.html
+++ b/pyq/Anatomy.html
@@ -1822,7 +1822,7 @@ Which muscle type is shown in the image below?<br />
                                                                     <h4 class="question-title"> Question 68:  </h4>
                                                                     <h4>What is the true marking in this image of the anterior abdominal wall?<br />
 <img height="369" src="https://d2f8z173p7073l.cloudfront.net/1666467419937" width="288" /><br />
-</h4>
+&nbsp;</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -4894,6 +4894,7 @@ in the diagram below. What is the correct label for the conjoined tendon?<br />
                                                                     <h4 class="question-title"> Question 189:  </h4>
                                                                     <h4>Which of the following is an outcome of the lesion of the marked structure l?<br />
 <img height="292" src="https://d2f8z173p7073l.cloudfront.net/1667824219468" width="385" />\<br />
+ I/L facial palsy&nbsp;<br />
 </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
