--- a/pyq/Medicine.html
+++ b/pyq/Medicine.html
@@ -961,6 +961,10 @@ Reason: Chance of development of sleep apnea in stroke patient<br />
                                                                 <div>
                                                                     <h4 class="question-title"> Question 34:  </h4>
                                                                     <h4>Consider the following statements in AF patients:<br />
+ NOAC ( New oral Anticoagulants) are used in atrial fibrillation and mitral stenosis<br />
+2. NOAC are contraindicated in mechanical(prosthetic valve)<br />
+3. Patients with ischemic stroke due to Atrial Fibrilation can be started on anticoagulation<br />
+4. Beta blockers are routinely used to prevent Atrial Fibrillation in patients undergoing noncardiac surgery<br />
 </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
@@ -1976,7 +1980,8 @@ Which of the following conditions has the least chance of being connected to the
                                                                 <input type="hidden" value="4" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 74:  </h4>
-                                                                    <h4>A 35-year-old patient was admitted with severe ascites and had an abdominal paracentesis. The fluid is clear, cell-free under a microscope, and contains ascitic albumin levels of </h4>
+                                                                    <h4>A 35-year-old patient was admitted with severe ascites and had an abdominal paracentesis. The fluid is clear, cell-free under a microscope, and contains ascitic albumin levels of 2g% and serum albumin values of 3.5g%. Identify the underlying cause?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -2002,7 +2007,8 @@ Which of the following conditions has the least chance of being connected to the
                                                                     <h4 class="question-title"> Question 75:  </h4>
                                                                     <h4>Male, age 50, had been complaining of fatigue for a year. Evaluation revealed severe splenomegaly and moderate anaemia.<br />
 Neutrophils make up 60% of the blood, whereas basophils and eosinophils make up 4%, 6%, and 15% of the lymphocytes, respectively.<br />
-Myeloblasts, myelocytes, metamyelocytes, and bands were also seen. The M:E ratio is 18:</h4>
+Myeloblasts, myelocytes, metamyelocytes, and bands were also seen. The M:E ratio is 18: What investigation is the most sensitive?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -3667,6 +3673,10 @@ What cause is most likely?<br />
                                                                 <div>
                                                                     <h4 class="question-title"> Question 141:  </h4>
                                                                     <h4>What is the proper sequence for blood sampling?<br />
+ Verification of patient&rsquo;s profile<br />
+2. Labeling at bedside<br />
+3. Sampling<br />
+4. Identification of patient<br />
 </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
@@ -8639,7 +8649,7 @@ d.&nbsp;Wegener&#39;s granulomatosis<br />
                                                                 <div>
                                                                     <h4 class="question-title"> Question 337:  </h4>
                                                                     <h4>What is the time frame for thrombolysis in a stroke patient?<br />
-</h4>
+&nbsp;</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -12007,7 +12017,10 @@ The vertebrae have lytic lesions.&nbsp; Which of the following is the most likel
                                                                 <div>
                                                                     <h4 class="question-title"> Question 470:  </h4>
                                                                     <h4>In cases of haemorrhage, the shock index (HR/SBP) can be used to assess the level of bleeding. Which of the following best describes a serious PPH?<br />
-</h4>
+ 0.3-0.5<br />
+2. 0.5-0.7<br />
+3. 0.7-0.9<br />
+4. 0.9-</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -13676,6 +13689,8 @@ What course of treatment is recommended for intractable</p>
                                                                 <div>
                                                                     <h4 class="question-title"> Question 536:  </h4>
                                                                     <h4>Which of the following statements is not true?<br />
+ A parathyroid hormone-related protein is responsible for causing hypercalcemia in cancer patients<br />
+2. The unionised fraction of calcium in the plasma is an important determinant of PTH secretion<br />
 </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
@@ -14851,7 +14866,9 @@ What investigations will you send for ruling out acute viral hepatitis?<br />
                                                                 <input type="hidden" value="2" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 582:  </h4>
-                                                                    <h4>A young donor with a platelet count of </h4>
+                                                                    <h4>A young donor with a platelet count of 9L arrived at the blood bank for platelet apheresis for the first time. He had circumoral numbness and paresthesias during<br />
+the course of the donation. But his vital signs are still steady. Tachycardia with ST-T alterations was seen on the ECG. What is the cause of his symptoms?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -14926,7 +14943,8 @@ What investigations will you send for ruling out acute viral hepatitis?<br />
                                                                 <div>
                                                                     <h4 class="question-title"> Question 585:  </h4>
                                                                     <h4>ESRD and pedal edoema were detected in a patient with hypertension. The patient is not passing urine.<br />
-Investigations revealed that the serum creatinine level was </h4>
+Investigations revealed that the serum creatinine level was 9 mg/dl. Which medication from the list below should be administered to this patient to treat their hypertension?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
