--- a/pyq/Microbiology.html
+++ b/pyq/Microbiology.html
@@ -2570,7 +2570,24 @@ What might have caused the original negative test results?<br />
 	<tbody>
 		<tr>
 			<td valign="top">A. ETEC</td>
-			<td valign="top"></h4>
+			<td valign="top"> Produce a heat stable toxin and cause activation of guanylyl cyclase</td>
+		</tr>
+		<tr>
+			<td valign="top">B. EIEC</td>
+			<td valign="top">2. Invades intestinal mucosal cells</td>
+		</tr>
+		<tr>
+			<td valign="top">C. EHEC</td>
+			<td valign="top">3. Produces a toxin against vascular endothelium cell</td>
+		</tr>
+		<tr>
+			<td valign="top">D. EPEC</td>
+			<td valign="top">4. Adhere to the mucosal surface and cause effacement of microvilli</td>
+		</tr>
+	</tbody>
+</table>
+<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -7463,7 +7480,24 @@ Which of the following statements about the pathogen is true?<br />
 	<tbody>
 		<tr>
 			<td valign="top">A. Diphyllobothrium</td>
-			<td valign="top"></h4>
+			<td valign="top"> Sheep</td>
+		</tr>
+		<tr>
+			<td valign="top">B. Paragonimus</td>
+			<td valign="top">2. Cray fish</td>
+		</tr>
+		<tr>
+			<td valign="top">C. Brugia</td>
+			<td valign="top">3. Cyclops</td>
+		</tr>
+		<tr>
+			<td valign="top">D. Fasciola</td>
+			<td valign="top">4. Mansonia</td>
+		</tr>
+	</tbody>
+</table>
+<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -9410,7 +9444,24 @@ iv. Neutrophils<br />
 	<tbody>
 		<tr>
 			<td valign="top">A. Balamuthia mandrillaris</td>
-			<td valign="top"></h4>
+			<td valign="top"> Flagella</td>
+		</tr>
+		<tr>
+			<td valign="top">B. Balantidium coli</td>
+			<td valign="top">2. Cilia</td>
+		</tr>
+		<tr>
+			<td valign="top">C. Trichomonas vaginalis</td>
+			<td valign="top">3. Pseudopod</td>
+		</tr>
+		<tr>
+			<td valign="top">D. Toxoplasma gondii</td>
+			<td valign="top">4. No particular organ</td>
+		</tr>
+	</tbody>
+</table>
+<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
