--- a/pyq/OBGYN.html
+++ b/pyq/OBGYN.html
@@ -3763,7 +3763,9 @@ D. Vaginal discharge<br />
                                                                 <div>
                                                                     <h4 class="question-title"> Question 143:  </h4>
                                                                     <h4>How do we define a prolonged 1st stage of labour?<br />
-</h4>
+ Latent phase &gt; 20 hours in primipara<br />
+2.Latent phase &gt; 20 hours in multipara<br />
+3. Rate of cervical dilatation &lt; </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -7916,7 +7918,24 @@ What is the most likely diagnosis?<br />
 	<tbody>
 		<tr>
 			<td>A. Sheehan syndrome</td>
-			<td></h4>
+			<td> low LH, low FSH, low Estrogen</td>
+		</tr>
+		<tr>
+			<td>B. Asherman syndrome</td>
+			<td>2. All are normal</td>
+		</tr>
+		<tr>
+			<td>C.PCOS</td>
+			<td>3. High LH, Normal FSH, Normal to high estrogen</td>
+		</tr>
+		<tr>
+			<td>D. Ovarian insuficiency</td>
+			<td>4. High LH and FSH, Low estrogen</td>
+		</tr>
+	</tbody>
+</table>
+<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -11281,7 +11300,24 @@ What kind of management is suitable for this woman?<br />
 	<tbody>
 		<tr>
 			<td>A. Vaginal discharge</td>
-			<td></h4>
+			<td> Green</td>
+		</tr>
+		<tr>
+			<td>B. Urethral discharge</td>
+			<td>2. Grey</td>
+		</tr>
+		<tr>
+			<td>C. PID</td>
+			<td>3. Yellow</td>
+		</tr>
+		<tr>
+			<td>D. Herpes</td>
+			<td>4. Red</td>
+		</tr>
+	</tbody>
+</table>
+<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
