--- a/pyq/Ophthalmology.html
+++ b/pyq/Ophthalmology.html
@@ -6291,7 +6291,8 @@ Steroids had a 50% response rate in the patient. The diagnosis is:<br />
                                                                 <div>
                                                                     <h4 class="question-title"> Question 245:  </h4>
                                                                     <h4>What is the normal value of Arden index?<br />
-</h4>
+ 1<br />
+2. </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -6366,7 +6367,8 @@ Steroids had a 50% response rate in the patient. The diagnosis is:<br />
                                                                 <div>
                                                                     <h4 class="question-title"> Question 248:  </h4>
                                                                     <h4>What is the typical rabbit weight used in ophthalmology research?<br />
-</h4>
+&nbsp;0.5-1 kg<br />
+2.&nbsp;</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
