--- a/pyq/PSM.html
+++ b/pyq/PSM.html
@@ -1131,7 +1131,7 @@ Which of the following claims about deworming in accordance with National Child 
                                                                 <div>
                                                                     <h4 class="question-title"> Question 41:  </h4>
                                                                     <h4>Which parameters are used to calculate RDA in women?<br />
-</h4>
+ </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -1508,7 +1508,7 @@ Which of the following claims about deworming in accordance with National Child 
                                                                 <div>
                                                                     <h4 class="question-title"> Question 56:  </h4>
                                                                     <h4>The following descriptions of the annual rate of infection (ARI) for tuberculosis are all accurate, with the exception of:<br />
-</h4>
+ The average estimated ARI for India in </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -1733,7 +1733,8 @@ Which of the following claims about deworming in accordance with National Child 
                                                                 <div>
                                                                     <h4 class="question-title"> Question 65:  </h4>
                                                                     <h4>For emergency contraception, the following levonorgestrel dosage is used:<br />
-</h4>
+ 1&ndash;3 mg within 72 hours<br />
+2. </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -2091,7 +2092,7 @@ D. Oral polio vaccine is avoided in the child&rsquo;s sibling<br />
                                                                 <div>
                                                                     <h4 class="question-title"> Question 79:  </h4>
                                                                     <h4>Which of the following is not definition of a problem village in the National Water Supply and Sanitation program ?<br />
-</h4>
+ Distance of safe water is greater than </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -4879,7 +4880,7 @@ Whom should you inform of the school health service&#39;s reports?<br />
                                                                 <div>
                                                                     <h4 class="question-title"> Question 188:  </h4>
                                                                     <h4>The current percentage of Indian GDP spent on health is:<br />
-</h4>
+ </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -5480,7 +5481,8 @@ Whom should you inform of the school health service&#39;s reports?<br />
                                                                 <input type="hidden" value="2" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 212:  </h4>
-                                                                    <h4>500 people in a population of 5000 had myopia as of January 1, 2011, and nine new cases had developed by December 31, 201</h4>
+                                                                    <h4>500 people in a population of 5000 had myopia as of January 1, 2011, and nine new cases had developed by December 31, 201 Determine the incidence?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -6262,7 +6264,7 @@ This is referred to as:<br />
                                                                 <input type="hidden" value="1" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 243:  </h4>
-                                                                    <h4>A researcher wants to know whether there is an association of CRP values with risk of MI/ Cancer. They started to take CRP readings. 4 values of RR was plotted ( 1, </h4>
+                                                                    <h4>A researcher wants to know whether there is an association of CRP values with risk of MI/ Cancer. They started to take CRP readings. 4 values of RR was plotted ( 1, 5,</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -6864,7 +6866,8 @@ d. Salmonella typhi</h4>
                                                                 <input type="hidden" value="2" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 267:  </h4>
-                                                                    <h4>Hb was calculated in a blood sample using a novel method. The test was run ten times. The reports were: 9.5, 9.2, 9.6, 9.7, 9.9, 10.2, 10.3, 10.5, and 12.</h4>
+                                                                    <h4>Hb was calculated in a blood sample using a novel method. The test was run ten times. The reports were: 9.5, 9.2, 9.6, 9.7, 9.9, 10.2, 10.3, 10.5, and 12. Standard tests determined that the accurate value of Hb was 10.2. The new method includes the following features:<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -10406,7 +10409,8 @@ d. Lay information<br />
                                                                 <input type="hidden" value="1" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 406:  </h4>
-                                                                    <h4>The risk ratio in a cohort study to investigate the relationship between a factor and disease was determined to be </h4>
+                                                                    <h4>The risk ratio in a cohort study to investigate the relationship between a factor and disease was determined to be  What does this demonstrate?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -11189,7 +11193,10 @@ D. MMU run by external agency and medical supplies also by an external agency<br
                                                                 <div>
                                                                     <h4 class="question-title"> Question 437:  </h4>
                                                                     <h4>What is the recommended daily protein intake for female children aged 13 to 15?<br />
-</h4>
+ 0.68<br />
+2. 0.95<br />
+3. 1<br />
+4. </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -11617,7 +11624,8 @@ Which of the following statements about the test is accurate?<br />
                                                                 <input type="hidden" value="1" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 454:  </h4>
-                                                                    <h4>A&nbsp;neighbourhood has </h4>
+                                                                    <h4>A&nbsp;neighbourhood has 65,000 people living there on June 1st, according to records. 22 new cases of tuberculosis were reported overall between January 1 and June 31, 2017. There were 220 TB cases that were officially reported in the community. What is the number of TB cases per 10 lakh people in this community?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -12549,7 +12557,10 @@ Area C - 10&ndash;13 cases per year, last week 1 case<br />
                                                                 <div>
                                                                     <h4 class="question-title"> Question 491:  </h4>
                                                                     <h4>Which emergency contraception is most popular in India?<br />
-</h4>
+ Ulipristal 30 mg<br />
+2. CuT IUD<br />
+3. Implants<br />
+4. Levonorgestrel </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
