--- a/pyq/Pediatrics.html
+++ b/pyq/Pediatrics.html
@@ -277,7 +277,8 @@ What is the most probable diagnosis?<br />
                                                                 <input type="hidden" value="4" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 7:  </h4>
-                                                                    <h4>An 18-month-old child weighing 1</h4>
+                                                                    <h4>An 18-month-old child weighing 15 kg arrives at the PHC with a fever and respiratory problems. The young child is lethargic/unable to feed. On examination, has a respiratory rate of 46 bpm and no chest retractions. What is the best course of action for this child?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -4818,7 +4819,8 @@ What is the most likely&nbsp;diagnosis?<br />
                                                                 <input type="hidden" value="1" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 187:  </h4>
-                                                                    <h4>A 6-year-old boy complains of wetting the bed. The youngster is calm during the day, and the issue only arises at night. The child&#39;s growth and development were typical. The urine specific gravity was </h4>
+                                                                    <h4>A 6-year-old boy complains of wetting the bed. The youngster is calm during the day, and the issue only arises at night. The child&#39;s growth and development were typical. The urine specific gravity was 020 and urine microscopy was normal. How do you plan to manage?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -6086,7 +6088,24 @@ What is the most likely diagnosis?<br />
 	<tbody>
 		<tr>
 			<td>A.MRKH</td>
-			<td></h4>
+			<td> 46 XX</td>
+		</tr>
+		<tr>
+			<td>B.SWYERS</td>
+			<td>2. 46 XY</td>
+		</tr>
+		<tr>
+			<td>C. Turner&rsquo;s syndrome</td>
+			<td>3. 45 X0</td>
+		</tr>
+		<tr>
+			<td>D.AIS</td>
+			<td>4. 46 XY</td>
+		</tr>
+	</tbody>
+</table>
+<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -6210,7 +6229,9 @@ What is the most likely diagnosis?<br />
                                                                 <input type="hidden" value="1" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 242:  </h4>
-                                                                    <h4>What is the diagnosis for a Child with fever &times; 5 days, conjunctivitis, cervical Lymphadenopathy &gt; </h4>
+                                                                    <h4>What is the diagnosis for a Child with fever &times; 5 days, conjunctivitis, cervical Lymphadenopathy &gt; 5 cm v/L, erythema and desquamation, oral mucosa&nbsp;
+reddish?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
