--- a/pyq/Pharmacology.html
+++ b/pyq/Pharmacology.html
@@ -908,7 +908,23 @@ D. Aspirin is used as it is most powerful NSAID<br />
 	<tbody>
 		<tr>
 			<td valign="top">A. Heparin</td>
-			<td valign="top"></h4>
+			<td valign="top"> Levocarnitine</td>
+		</tr>
+		<tr>
+			<td valign="top">B. Ethylene glycol</td>
+			<td valign="top">2. Protamine</td>
+		</tr>
+		<tr>
+			<td valign="top">C. Hydrofluoric acid</td>
+			<td valign="top">3. Fomepizole</td>
+		</tr>
+		<tr>
+			<td valign="top">D. Valproate</td>
+			<td valign="top">4. Calcium gluconate</td>
+		</tr>
+	</tbody>
+</table>
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -2858,7 +2874,7 @@ Which of the following antibiotics is best for treatment?<br />
                                                                 <input type="hidden" value="1" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 109:  </h4>
-                                                                    <h4>Continuous intravenous infusion of medication X was administered at </h4>
+                                                                    <h4>Continuous intravenous infusion of medication X was administered at 6 mg per minute. The medication has a 640 mL/min clearance rate. What would the drug&#39;s steady state plasma concentration be at a </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -7927,7 +7943,7 @@ insulin injections. Which of the following oral hypoglycemic medications, which 
                                                                 <div>
                                                                     <h4 class="question-title"> Question 310:  </h4>
                                                                     <h4>Which mechanism does nitroprusside&#39;s active metabolite use?<br />
-</h4>
+ Phosphokinase </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -8629,7 +8645,8 @@ insulin injections. Which of the following oral hypoglycemic medications, which 
                                                                 <div>
                                                                     <h4 class="question-title"> Question 338:  </h4>
                                                                     <h4>Which of these is not true regarding methanol poisoning?<br />
-</h4>
+ Fomepizole is a competitive inhibitor of aldehyde dehydrogenase&nbsp;<br />
+2. Toxic level of methanol is </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -8755,7 +8772,7 @@ The condition improved after intravenous corticosteroids and aminophylline were 
                                                                 <div>
                                                                     <h4 class="question-title"> Question 343:  </h4>
                                                                     <h4>Ceftriaxone 180 mg is required for a patient. There are 10 divisions per millilitre in your 2 ml syringe. 500 mg/5 ml of ceftriaxone are present in the vial. To administer 180 mg of ceftriaxone, how many divisions in a 2 ml syringe should you fill?<br />
-</h4>
+ </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -10643,7 +10660,24 @@ D. Gabapentin<br />
 	<tbody>
 		<tr>
 			<td valign="top">A. Bacteroides</td>
-			<td valign="top"></h4>
+			<td valign="top"> Vancomycin</td>
+		</tr>
+		<tr>
+			<td valign="top">B. MRSA</td>
+			<td valign="top">2. Metronidazole</td>
+		</tr>
+		<tr>
+			<td valign="top">C. Hemophilus</td>
+			<td valign="top">3. Meropenem</td>
+		</tr>
+		<tr>
+			<td valign="top">D. Klebsiella</td>
+			<td valign="top">4. Penicillin</td>
+		</tr>
+	</tbody>
+</table>
+<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -12299,7 +12333,8 @@ Which of the following sentences represents the right next step?<br />
                                                                 <input type="hidden" value="3" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 484:  </h4>
-                                                                    <h4>A patient who needs surgery has a bilirubin level of 8 mg/dl and a serum creatinine level of </h4>
+                                                                    <h4>A patient who needs surgery has a bilirubin level of 8 mg/dl and a serum creatinine level of 9 mg/dl. What is the preferred muscle relaxant for this patient?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -14259,7 +14294,24 @@ D. HCQ<br />
                                                                 <input type="hidden" value="1" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 562:  </h4>
-                                                                    <h4>The data for drug A&#39;s AUC alone and when coupled with drug B are shown in the following table. The p value is 0.0</h4>
+                                                                    <h4>The data for drug A&#39;s AUC alone and when coupled with drug B are shown in the following table. The p value is 0.0 Which of the following assertions about these medications is the most accurate?
+<table border="1" cellpadding="1" cellspacing="1" style="width: 500px;">
+	<tbody>
+		<tr>
+			<td>DRUG</td>
+			<td>Area Under The Curve (AUC)</td>
+		</tr>
+		<tr>
+			<td>A alone</td>
+			<td>550 <span class="math-tex">\(\pm\)</span> 150</td>
+		</tr>
+		<tr>
+			<td>A plus B</td>
+			<td>850 <span class="math-tex">\(\pm\)</span> 150</td>
+		</tr>
+	</tbody>
+</table>
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -14808,7 +14860,8 @@ which is both a partial agonist and an antagonist at mu and kappa receptors. Wha
                                                                     <h4 class="question-title"> Question 583:  </h4>
                                                                     <h4>A patient needs 180 mg of ceftriaxone. A 2 mL syringe with 10 divisions per mL is at your disposal. Ceftriaxone 500 mg/5 ml is what&#39;s in the vial.<br />
 How many divisions will you fill in the 2 ml syringe to administer 180 mg of ceftriaxone?<br />
-</h4>
+&nbsp;18<br />
+2.&nbsp;</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
