--- a/pyq/Physiology.html
+++ b/pyq/Physiology.html
@@ -4412,7 +4412,7 @@ Which of the laboratory results listed below indicates compensated metabolic aci
                                                                 <div>
                                                                     <h4 class="question-title"> Question 171:  </h4>
                                                                     <h4>What value is the pH of a solution with 5 millimole/liter of H+ ions closest to?<br />
-</h4>
+&nbsp;</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -4462,7 +4462,10 @@ Which of the laboratory results listed below indicates compensated metabolic aci
                                                                 <div>
                                                                     <h4 class="question-title"> Question 173:  </h4>
                                                                     <h4>What is the respiratory quotient when oxygen is utilized at 250 and carbon dioxide is liberated at 200?<br />
-</h4>
+ 0.7<br />
+2. 0.8<br />
+3. 0.9<br />
+4. </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -6528,7 +6531,9 @@ The following conversion is aided by the &#39;A&#39;-marked factor. What is the 
                                                                 <div>
                                                                     <h4 class="question-title"> Question 255:  </h4>
                                                                     <h4>What will be the Respiratory Quotient (RQ) of a person on pure carbohydrate diet?<br />
-</h4>
+&nbsp;0.7<br />
+2.&nbsp;1<br />
+3.&nbsp;</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -9227,7 +9232,8 @@ What does Fick&#39;s law (Flick&#39;s law was given in the paper) deal with?<br 
                                                                 <div>
                                                                     <h4 class="question-title"> Question 362:  </h4>
                                                                     <h4>Which characteristics identify a normal semen analysis in accordance with the 2010 WHO criteria?<br />
-</h4>
+ Volume 2.0 mL, count 20 million, morphology 4% progressive motility 32%<br />
+2. Volume </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
