--- a/pyq/Surgery.html
+++ b/pyq/Surgery.html
@@ -2308,7 +2308,24 @@ A 45-year-old man who is a known case of myasthenia gravis underwent VATS thymec
 	<tbody>
 		<tr>
 			<td>A.&nbsp;Breast surgery</td>
-			<td></h4>
+			<td>&nbsp;Long thoracic nerve</td>
+		</tr>
+		<tr>
+			<td>B.&nbsp;Thyroid surgery</td>
+			<td>2.&nbsp;External laryngeal nerve</td>
+		</tr>
+		<tr>
+			<td>C.&nbsp;&nbsp;Submandibular excision</td>
+			<td>3.&nbsp;Hypoglossal nerve</td>
+		</tr>
+		<tr>
+			<td>D.&nbsp;Video assisted thymectomy</td>
+			<td>4.&nbsp;Phrenic nerve</td>
+		</tr>
+	</tbody>
+</table>
+<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -4026,7 +4043,9 @@ A card in his pocket states that he is a diabetic who takes Tab Glimepiride + Me
                                                                 <input type="hidden" value="1" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 154:  </h4>
-                                                                    <h4>A </h4>
+                                                                    <h4>A 5-year-old toddler with a history of hot water burns on both hands and palms was brought to the emergency room. The lesion was pink, oozing, and<br />
+excruciating to touch and look at. Which of the following is the best course of action for this patient?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -5119,7 +5138,7 @@ What is the next course of action?<br />
                                                                 <div>
                                                                     <h4 class="question-title"> Question 197:  </h4>
                                                                     <h4>Which of the following is not an admission criterion for upper GI bleeding?&nbsp;<br />
-</h4>
+ Shock index &gt; </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -5673,7 +5692,7 @@ His heartbeat is 118 bpm, his rhythm is abnormally erratic, and his blood pressu
                                                                 <input type="hidden" value="3" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 219:  </h4>
-                                                                    <h4>For a </h4>
+                                                                    <h4>For a 5 </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -7032,7 +7051,8 @@ This angiography is displayed. What comes after this in terms of management?<br 
                                                                 <input type="hidden" value="3" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 273:  </h4>
-                                                                    <h4>A patient who is a 48-year- old female, has left flank abdominal pain, recurrent gross hematuria, and seizure. A CT scan of the abdomen indicates several right renal angiomyolipoma measuring </h4>
+                                                                    <h4>A patient who is a 48-year- old female, has left flank abdominal pain, recurrent gross hematuria, and seizure. A CT scan of the abdomen indicates several right renal angiomyolipoma measuring 5 to 6.5 cm and a left perinephric hematoma with a 3 cm angiomyolipoma. What is the most likely diagnosis?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
@@ -8293,7 +8313,8 @@ What is the most probable diagnosis?<br />
                                                                 <input type="hidden" value="4" class="hdfCurrectAns">
                                                                 <div>
                                                                     <h4 class="question-title"> Question 322:  </h4>
-                                                                    <h4>A </h4>
+                                                                    <h4>A 5-year-old girl is brought to the clinic complaining of severe undernourishment, intolerance to feeds, and extreme head enlargement. A medulloblastoma causing obstructive hydrocephalus was suggested by MRI imaging. Which of the following describes an incorrect approach to patient management?<br />
+</h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
