--- a/pyq/Orthopaedics.html
+++ b/pyq/Orthopaedics.html
@@ -3481,7 +3481,9 @@ What is the most likely diagnosis?<br />
                                                                 <div>
                                                                     <h4 class="question-title"> Question 132:  </h4>
                                                                     <h4>Which of the following is not true regarding osteoporosis?<br />
-</h4>
+ Calcitonin decreases pain<br />
+2. Bisphosphonates are work horse for treatment&nbsp;&nbsp;<br />
+3. T-score &lt; </h4>
                                                                    <br>
                                                                     <table class="table table-borderless mb0">
                                                                         <tbody>
